# rust_toys

./: LICENSE  README.md
logging/: Cargo.toml
logging/config/: log_config.yaml
logging/src/: main.rs
time_email/: Cargo.toml
time_email/src/: logging.rs  main.rs
