[package]
name = "Amirali"
version = "0.1.0"
authors = ["Amirali Sharifian <am.sharifian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
lettre = "0.9.3"
lettre_email = "0.9"
mime = "0.3.16"


